tests/corpus/negative/N19-true-division-assignment/source.py
def halve(value):
    value /= 2
    return value
